# NumCpp

docs/markdown/: Installation.md
examples/NumCppWithOpenCV/: CMakeLists.txt
examples/NumCppWithOpenCV/cmake/: summary.cmake
examples/NumCppWithOpenCV/example/: CMakeLists.txt  numpy2cpp_test.cpp
examples/NumCppWithOpenCV/src/: CMakeLists.txt  NumCppWithOpenCV.cpp  NumCppWithOpenCV.hpp
examples/NumCppWithOpenCV/toolchains/: README.md  aarch64-linux-gnu.toolchain.cmake
