FILE (GLOB EXAMPLE_SRC_LIST   "${CMAKE_SOURCE_DIR}/example/*.cpp" "${CMAKE_SOURCE_DIR}/example/*.c")
FOREACH(source ${EXAMPLE_SRC_LIST})
    GET_FILENAME_COMPONENT(name ${source} NAME_WE)
    ADD_EXECUTABLE(${name} ${source})
    TARGET_INCLUDE_DIRECTORIES (${name} PUBLIC ${NUMPY2CPP_HEADER_PATH} ${3RDPARTY_INCLUDE_PATH})
    TARGET_LINK_LIBRARIES (${name} PUBLIC ${3RDPARTY_LINK_LIBRARIES} ${NUMPY2CPP_TENGINE_NAME})
ENDFOREACH()
